--- a/frontend/src/pages/Gallery.scss
+++ b/frontend/src/pages/Gallery.scss
@@ -28,17 +28,9 @@ section.art-display {
     }
 }
 @media screen and (min-width: 768px) {
-    div.grid-container {
-        display: grid;
-    }
     section.art-display {
-  //      display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        .one {
-            grid-column: 1 / 2;
-            grid-row: 1;
-        }
+        display: grid;
+       
         .two {
             grid-column: 2 / 3 ;
             grid-row: 1;
@@ -56,9 +48,15 @@ section.art-display {
             grid-row: 2;
         }
     }
+    .one {
+        background-color: yellow;
+        height: 80px;
+        width: 20%;
+        grid-column: 1 / 2;
+        grid-row: 1;
+    }
     figure {
         width: 250px;
     }
 }
-   
 }
