updated header and burger-menu + added a link on header-logo

--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -1,55 +1,66 @@
-.header-container {
-  border-bottom: 2px solid #000000;
+.header-big-container {
+  height: 72px;
+  filter: drop-shadow(0px 2px #000000);
+  position: relative;
+  z-index: 2;
 
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  .header-logo {
-    max-width: 36%;
-    object-fit: contain;
-  }
-
-  .logo-AFAC {
-    max-width: 100%;
-    max-height: 100%;
-  }
-
-  .burger-menu {
-    cursor: pointer;
-    margin-top: 3%;
-    margin-right: 3%;
-    width: auto;
-    height: auto;
-  }
-
-  .icone-burger {
-    max-height: 100%;
-    max-width: 100%;
-    font-size: 5vh;
-  }
-
-  .ruby {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    background: #7f253e;
+  .header-background {
+    width: 100%;
+    height: 72px;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    z-index: -1;
     clip-path: polygon(
-      23.41% 31.28%,
-      50.42% 15.84%,
-      77.02% 31.37%,
-      77.02% 63.79%,
-      50.42% 79.56%,
-      23.6% 64.1%
+      0 0,
+      0 62%,
+      calc(50vw - 40px) 62%,
+      50% 100%,
+      calc(50vw + 40px) 62%,
+      100% 62%,
+      100% 0
     );
-    box-shadow: 0px 20px 0px #ffffff, 0px 26px 0px #000000;
+
+    .ruby {
+      width: 42px;
+      height: 50px;
+      margin-top: 6px;
+      background: #7f253e;
+      clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+    }
+  }
+
+  .header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 45px;
+
+    .logo-AFAC {
+      max-height: 42px;
+    }
+
+    .burger-menu {
+      cursor: pointer;
+      margin-right: 1%;
+      width: auto;
+      height: auto;
+    }
+
+    .icone-burger {
+      max-height: 42px;
+      max-width: 42px;
+      font-size: 5vh;
+    }
   }
 }
 
 .nav-menu {
   position: relative;
-  background-color: rgb(234, 234, 234);
+  margin-top: calc(-72px + 47px);
+  z-index: 1;
+  background-color: rgba(234, 234, 234, 0.7);
   width: 250px;
   height: 100vh;
   display: flex;
@@ -82,4 +93,10 @@
 a {
   text-decoration: none;
   color: #000000;
+}
+
+@media screen and (min-width: 768px) {
+  .header-container {
+    height: 120px;
+  }
 }
