--- a/frontend/src/pages/Gallery.scss
+++ b/frontend/src/pages/Gallery.scss
@@ -1,26 +1,29 @@
-figcaption {
-  visibility: hidden;
+.image-container {
+  position: relative;
+  display: inline-block;
+  margin-top: 10%;
+  margin-left: 5%;
+  margin-right: 5%;
+  box-shadow: 4px 1px 4px rgba($color: #000000, $alpha: 0.5);
 }
-img:hover {
-  figcaption {
-    position: relative;
-    z-index: 1;
-    display: flex;
-    visibility: visible;
-    opacity: 1;
-    justify-content: space-between;
-    color: white;
-    background-color: #74658A;
-    width: 100%;
-    margin-top: -30px;
-  }
+.image-container figcaption {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  position: absolute;
+  background-color: #74658ad5;
+  color: white;
+  padding: 5px 10px;
+  transition: visibility 0s, opacity 0.5s;
+  box-shadow: 4px 4px 4px rgba($color: #000000, $alpha: 0.5);
 }
-
+.image-container figcaption .link {
+  color: #ffffff;
+}
 img {
   max-width: 100%;
   display: block;
 }
-
 figure {
   display: grid;
   grid-template-rows: 1fr auto;
@@ -49,9 +52,26 @@ figure > img {
   }
 }
 @media screen and (min-width: 1024px) {
+  .image-container {
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .image-container figcaption { 
+    visibility: hidden;
+    opacity: 0;
+  }
+  .image-container:hover figcaption {
+    display: flex;
+    justify-content: space-between;
+    visibility: visible;
+    opacity: 1;
+    bottom: 0;
+  }
   .container {
     column-count: 3;
   }
+
 }
 @media screen and (min-width: 1224px) {
   .container {
