--- a/frontend/src/components/HomeHexagone.module.scss
+++ b/frontend/src/components/HomeHexagone.module.scss
@@ -3,43 +3,55 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 100%;
 
   span {
     width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+
     .hexa1 {
-      display: flex;
-      flex-direction: column;
-      padding: 13px;
+      max-width: 355px;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      grid-template-rows: repeat(10, 1fr);
+      gap: 11px;
       filter: drop-shadow(6px 4px 2px rgba(50, 50, 0, 0.6));
 
       .link {
-        position: relative;
         display: flex;
-        width: 225px;
-        height: 225px;
-        clip-path: polygon(5% 25%, 50% 0, 95% 25%, 95% 75%, 50% 100%, 5% 75%);
+        justify-content: center;
+        align-items: center;
+        clip-path: polygon(
+          5% 27.5%,
+          5% 72.5%,
+          50% 97.5%,
+          95% 72.5%,
+          95% 27.5%,
+          50% 2.5%
+        );
 
-        &:nth-child(odd) {
-          align-self: flex-start;
-        }
-        &:nth-child(even) {
-          align-self: flex-end;
-        }
-        &:first-child {
-          top: 45px;
-        }
-        &:last-child {
-          bottom: 45px;
+        &:nth-child(2) {
+          position: relative;
+          left: 10px;
         }
 
         img {
-          width: 225px;
-          height: 225px;
-          object-fit: cover;
+          width: 100%;
+          aspect-ratio: 1 / 1;
+        }
+        &:nth-child(1) {
+          grid-area: 1 / 3 / span 4 / span 4;
+        }
+        &:nth-child(2) {
+          grid-area: 4 / 1 / span 4 / span 4;
+        }
+        &:nth-child(3) {
+          grid-area: 7 / 3 / span 4 / span 4;
         }
       }
     }
+
     .hexa2 {
       display: none;
     }
@@ -47,173 +59,173 @@
 
   .button {
     padding: 2px;
+    margin-bottom: 30px;
     border: 5px double #bc7c61;
     text-decoration: none;
-    font-size: large;
+    font-size: 21px;
+    font-family: "Bebas Neue";
     background: none;
     color: #bc7c61;
   }
 }
 
-// Main phones sizes
-@media screen and (min-width: 375px) {
-  .gallery {
-    span {
-      .hexa1 {
-        padding: 20px;
-      }
-    }
-  }
-}
-@media screen and (min-width: 390px) {
-  .gallery {
-    span {
-      .hexa1 {
-        padding: 25px;
-      }
-    }
-  }
-}
-@media screen and (min-width: 412px) {
-  .gallery {
-    span {
-      .hexa1 {
-        padding: 38px;
-      }
-    }
-  }
-}
-// Main phones sizes
-
 @media screen and (min-width: 768px) {
   .gallery {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
-    width: 100%;
-
     span {
-      display: flex;
-      justify-content: space-evenly;
-      width: 100%;
-
       .hexa1 {
-        display: grid;
-        padding: 5px;
-        grid-template-columns: 145px;
-        grid-template-rows: 120px;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
-        filter: drop-shadow(6px 4px 2px rgba(50, 50, 0, 0.6));
-
-        .link {
-          position: relative;
-          display: flex;
-          width: 180px;
-          height: 180px;
-          clip-path: polygon(
-            25% 5%,
-            75% 5%,
-            100% 50%,
-            75% 95%,
-            25% 95%,
-            0% 50%
-          );
-
-          &:first-child {
-            top: 30px;
-            grid-area: 1 / 1 / 2 / 2;
-          }
-
-          &:nth-child(2) {
-            grid-area: 2 / 2 / 3 / 3;
-          }
-          &:last-child {
-            grid-area: 3 / 1 / 5 / 2;
-            bottom: 95px;
-          }
-        }
+        max-width: 400px;
       }
+
       .hexa2 {
+        max-width: 400px;
         display: grid;
-        padding: 5px;
-        grid-template-columns: 145px;
-        grid-template-rows: 120px;
-        grid-column-gap: 0px;
-        grid-row-gap: 0px;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: repeat(10, 1fr);
+        gap: 11px;
         filter: drop-shadow(6px 4px 2px rgba(50, 50, 0, 0.6));
 
         .link {
-          position: relative;
           display: flex;
-          width: 180px;
-          height: 180px;
+          justify-content: center;
+          align-items: center;
           clip-path: polygon(
-            25% 5%,
-            75% 5%,
-            100% 50%,
-            75% 95%,
-            25% 95%,
-            0% 50%
+            5% 27.5%,
+            5% 72.5%,
+            50% 97.5%,
+            95% 72.5%,
+            95% 27.5%,
+            50% 2.5%
           );
 
-          &:first-child {
-            top: 30px;
-            grid-area: 1 / 2 / 2 / 3;
+          &:nth-child(2) {
+            position: relative;
+            left: 10px;
           }
 
-          &:nth-child(2) {
-            grid-area: 2 / 1 / 3 / 2;
+          img {
+            width: 100%;
+            aspect-ratio: 1 / 1;
           }
-          &:last-child {
-            grid-area: 3 / 2 / 4 / 3;
-            bottom: 95px;
+          &:nth-child(1) {
+            grid-area: 1 / 1 / span 4 / span 4;
+          }
+          &:nth-child(2) {
+            grid-area: 4 / 3 / span 4 / span 4;
+          }
+          &:nth-child(3) {
+            grid-area: 7 / 1 / span 4 / span 4;
           }
         }
       }
     }
     .button {
-      position: relative;
-      bottom: 170px;
+      font-size: 26px;
+    }
+  }
+
+  @media screen and (min-width: 900px) {
+    .gallery {
+      span {
+        justify-content: space-around;
+
+        .hexa1 {
+          max-width: 780px;
+          max-height: 780px;
+          display: grid;
+          padding-right: 3%;
+          grid-template-columns: repeat(7, 1fr);
+          grid-template-rows: repeat(8, 1fr);
+          filter: drop-shadow(6px 4px 2px rgba(50, 50, 0, 0.6));
+
+          .link {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            clip-path: polygon(
+              27.5% 5%,
+              72.5% 5%,
+              97.5% 50%,
+              72.5% 95%,
+              27.5% 95%,
+              2.5% 50%
+            );
+
+            &:nth-child(2) {
+              position: relative;
+              left: 10px;
+            }
+
+            img {
+              width: 100%;
+              aspect-ratio: 1 / 1;
+            }
+            &:nth-child(1) {
+              grid-area: 1 / 1 / span 4 / span 4;
+            }
+            &:nth-child(2) {
+              grid-area: 3 / 4 / span 4 / span 4;
+            }
+            &:nth-child(3) {
+              grid-area: 5 / 1 / span 4 / span 4;
+            }
+          }
+        }
+        .hexa2 {
+          max-width: 780px;
+          max-height: 780px;
+          padding-left: 3%;
+          display: grid;
+          grid-template-columns: repeat(7, 1fr);
+          grid-template-rows: repeat(8, 1fr);
+          filter: drop-shadow(6px 4px 2px rgba(50, 50, 0, 0.6));
+
+          .link {
+            clip-path: polygon(
+              27.5% 5%,
+              72.5% 5%,
+              97.5% 50%,
+              72.5% 95%,
+              27.5% 95%,
+              2.5% 50%
+            );
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            &:nth-child(2) {
+              position: relative;
+              right: 10px;
+            }
+
+            img {
+              width: 100%;
+              aspect-ratio: 1 / 1;
+            }
+            &:nth-child(1) {
+              grid-area: 1 / 4 / span 4 / span 4;
+            }
+            &:nth-child(2) {
+              grid-area: 3 / 1 / span 4 / span 4;
+            }
+            &:nth-child(3) {
+              grid-area: 5 / 4 / span 4 / span 4;
+            }
+          }
+        }
+      }
+
+      .button {
+        position: relative;
+        bottom: 130px;
+        font-size: 32px;
+      }
     }
   }
 }
 
-@media screen and (min-width: 920px) {
-  .gallery {
-    span {
-      .hexa1 {
-        grid-template-columns: 180px;
-        grid-template-rows: 155px;
-        .link {
-          width: 225px;
-          height: 225px;
-
-          &:first-child {
-            top: 45px;
-          }
-          &:last-child {
-            bottom: 115px;
-          }
-        }
-      }
-
-      .hexa2 {
-        grid-template-columns: 180px;
-        grid-template-rows: 155px;
-        .link {
-          width: 225px;
-          height: 225px;
-
-          &:first-child {
-            top: 45px;
-          }
-          &:last-child {
-            bottom: 115px;
-          }
-        }
-      }
-    }
-  }
+@font-face {
+  font-family: "Bebas Neue";
+  src: url("./assets/fonts/bebas_neue/BebasNeue-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
