--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -6,28 +6,26 @@
 
   .header-background {
     width: 100%;
-    height: 72px;
+    height: 100%;
     background: #ffffff;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: absolute;
     z-index: -1;
     clip-path: polygon(
       0 0,
       0 62%,
-      calc(50vw - 40px) 62%,
+      calc(50% - 40px) 62%,
       50% 100%,
-      calc(50vw + 40px) 62%,
+      calc(50% + 40px) 62%,
       100% 62%,
       100% 0
     );
 
     .ruby {
-      width: 42px;
-      height: 50px;
-      margin-top: 6px;
-      background: #7f253e;
-      clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+      margin-top: -1%;
+      height: 65%;
     }
   }
 
@@ -35,22 +33,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 45px;
+    height: 62%;
 
     .logo-AFAC {
       max-height: 42px;
     }
 
-    .burger-menu {
-      cursor: pointer;
-      margin-right: 1%;
-      width: auto;
-      height: auto;
-    }
-
     .icone-burger {
-      max-height: 42px;
-      max-width: 42px;
+      cursor: pointer;
+      margin-right: 3%;
+      max-height: 10vw;
+      max-width: 10vw;
       font-size: 5vh;
     }
   }
@@ -58,7 +51,7 @@
 
 .nav-menu {
   position: relative;
-  margin-top: calc(-72px + 47px);
+  margin-top: calc(-72px + 45px);
   z-index: 1;
   background-color: rgba(234, 234, 234, 0.7);
   width: 250px;
@@ -96,7 +89,40 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  .header-container {
-    height: 120px;
+  .header-big-container {
+    height: 150px;
+
+    .header-background {
+      clip-path: polygon(
+        0 0,
+        0 78%,
+        calc(50% - 60px) 78%,
+        50% 100%,
+        calc(50% + 60px) 78%,
+        100% 78%,
+        100% 0
+      );
+
+      .ruby {
+        margin-top: 0;
+      }
+    }
+
+    .header-container {
+      height: 78%;
+
+      .logo-AFAC {
+        max-height: 109px;
+      }
+
+      .icone-burger {
+        max-height: 15vw;
+        max-width: 15vw;
+      }
+    }
+  }
+
+  .nav-menu {
+    margin-top: calc(-150px + 117px);
   }
 }
