--- a/frontend/src/components/LogIn.scss
+++ b/frontend/src/components/LogIn.scss
@@ -59,3 +59,13 @@
     gap: 8px;
     margin: 10px;
   }
+  .sign-up {
+    margin-left: 5%;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 2rem;
+    background: #74658ad5;
+    border: 1px solid #74658ad5;
+    color: #fff;
+    padding: 10px 20px;
+  }
