--- a/frontend/src/components/SignUp.scss
+++ b/frontend/src/components/SignUp.scss
@@ -3,7 +3,7 @@
     justify-content: center;
     flex-direction: column;
     gap: 20px;
-    margin-top: 8%;
+    margin-top: 5%;
     margin-bottom: 5%;
     height: auto;
   }
@@ -19,15 +19,15 @@
   input[type="submit"] {
     margin-top: 10px;
     cursor: pointer;
-    font-size: 15px;
-    background: #01d28e;
-    border: 1px solid #01d28e;
+    font-size: 2rem;
+    background: #74658ad5;
+    border: 1px solid #74658ad5;
     color: #fff;
     padding: 10px 20px;
   }
   
   input[type="submit"]:hover {
-    background: #6cf0c2;
+    background: #74658ad5;
   }
   
   .button-container {
@@ -36,9 +36,11 @@
   }
   
   .login-form {
-    background-color: white;
+    font-size: 2rem;
+    color: white;
+    background-color: #7f253e;
     width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.5), 0 6px 20px 0 rgba(0, 0, 0, 0.5);
   }
   
   .list-container {
