--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -1,39 +1,43 @@
 .header-big-container {
-  height: 72px;
-  filter: drop-shadow(0px 2px #000000);
+  height: 48px;
+  border-bottom: 2px solid #000000;
+  margin-bottom: 24px;
   position: relative;
+  display: flex;
+  align-items: center;
   z-index: 2;
 
-  .header-background {
-    width: 100%;
-    height: 100%;
-    background: #ffffff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  .ruby-background {
+    filter: drop-shadow(0px 2px #000000);
+    height: 24px;
+    width: 80px;
     position: absolute;
-    z-index: -1;
-    clip-path: polygon(
-      0 0,
-      0 62%,
-      calc(50% - 40px) 62%,
-      50% 100%,
-      calc(50% + 40px) 62%,
-      100% 62%,
-      100% 0
-    );
+    left: 50%;
+    transform: translateX(-50%) translateY(100%);
+    bottom: 0;
 
-    .ruby {
-      margin-top: -1%;
-      height: 65%;
+    &::after {
+      content: "";
+      display: block;
+      height: 100%;
+      clip-path: polygon(0 0, 50% 100%, 100% 0);
+      background-color: white;
     }
+  }
+
+  .ruby {
+    height: 50px;
+    position: absolute;
+    left: 50%;
+    top: 6px;
+    transform: translateX(-50%);
   }
 
   .header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 62%;
+    width: 100%;
 
     .logo-AFAC {
       max-height: 42px;
@@ -51,7 +55,7 @@
 
 .nav-menu {
   position: relative;
-  margin-top: calc(-72px + 45px);
+  margin-top: calc(-72px + 48px);
   z-index: 1;
   background-color: rgba(234, 234, 234, 0.7);
   width: 250px;
@@ -90,22 +94,17 @@ a {
 
 @media screen and (min-width: 768px) {
   .header-big-container {
-    height: 150px;
+    height: 117px;
+    margin-bottom: 28px;
 
-    .header-background {
-      clip-path: polygon(
-        0 0,
-        0 78%,
-        calc(50% - 60px) 78%,
-        50% 100%,
-        calc(50% + 60px) 78%,
-        100% 78%,
-        100% 0
-      );
+    .ruby-background {
+      height: 28px;
+      width: 120px;
+    }
 
-      .ruby {
-        margin-top: 0;
-      }
+    .ruby {
+      height: 98px;
+      top: 18px;
     }
 
     .header-container {
