--- a/frontend/src/components/LogIn.scss
+++ b/frontend/src/components/LogIn.scss
@@ -6,21 +6,47 @@
   flex-direction: column;
   gap: 20px;
   height: 100vh;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+
+  .login-form {
+    background-color: white;
+    padding: 2rem;
+  }
+
+  .title {
+    font-size: 25px;
+    margin-bottom: 20px;
+  }
+
+  .hexagone {
+    position: absolute;
+    bottom: -90px;
+    right: -54px;
+    width: 200px;
+    height: 200px;
+    transform: rotate(43deg);
+    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+    background: linear-gradient(
+      90deg,
+      rgba(127, 37, 62, 1) 0%,
+      rgba(127, 37, 62, 0.3505996148459384) 100%
+    );
+    z-index: -1;
+  }
 }
-input[type="email"],
-input[type="password"] {
+input.border[type="email"],
+input.border[type="password"] {
   height: 25px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  border: 2px solid #74658A;
 }
 
 button[type="submit"] {
   cursor: pointer;
-  padding: 2px;
+  padding: 4px 8px;
+  margin-top: 15px;
   margin-bottom: 30px;
   border: 5px double #bc7c61;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: "Bebas Neue";
   background: none;
   color: #bc7c61;
@@ -29,11 +55,6 @@ button[type="submit"] {
 .button-container {
   display: flex;
   justify-content: center;
-}
-
-.login-form {
-  background-color: white;
-  padding: 2rem;
 }
 
 .list-container {
@@ -45,26 +66,44 @@ button[type="submit"] {
   font-size: 12px;
 }
 
-.title {
-  font-size: 25px;
-  margin-bottom: 20px;
-}
-
 .input-container {
   display: flex;
   flex-direction: column;
   gap: 8px;
   margin: 10px;
 }
+.text {
+  font-size: 1rem;
+}
 .sign-up {
   cursor: pointer;
   padding: 2px;
-  margin-bottom: 30px;
   border: 5px double #bc7c61;
   text-decoration: none;
-  font-size: 2rem;
+  font-size: 1rem;
   font-family: "Bebas Neue";
   background: none;
   color: #bc7c61;
-  margin-left: 5%;
+  margin-left: 2%;
+  height: auto;
 }
+
+@media screen and (min-width: 1024px) {
+  input.border[type="email"],
+input.border[type="password"] {
+  height: 35px;
+}
+  .text {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+  }
+  .sign-up {
+    display: flex;
+    justify-content: center;
+    font-size: 1rem;
+  }
+
+}
+  
