Backend controller user

--- a/frontend/src/components/LogIn.scss
+++ b/frontend/src/components/LogIn.scss
@@ -36,7 +36,7 @@
 input.border[type="email"],
 input.border[type="password"] {
   height: 25px;
-  border: 2px solid #74658A;
+  border: 2px solid #74658a;
 }
 
 button[type="submit"] {
@@ -90,9 +90,9 @@ button[type="submit"] {
 
 @media screen and (min-width: 1024px) {
   input.border[type="email"],
-input.border[type="password"] {
-  height: 35px;
-}
+  input.border[type="password"] {
+    height: 35px;
+  }
   .text {
     display: flex;
     justify-content: center;
@@ -104,6 +104,4 @@ input.border[type="password"] {
     justify-content: center;
     font-size: 1rem;
   }
-
 }
-  
