--- a/frontend/src/components/SignUp.scss
+++ b/frontend/src/components/SignUp.scss
@@ -11,7 +11,7 @@ input.border2[type="text"],
 input.border2[type="email"],
 input.border2[type="password"] {
   height: 25px;
-  border: 2px solid #74658A;
+  border: 2px solid #74658a;
 }
 
 input[type="submit"] {
