--- a/frontend/src/components/Author.scss
+++ b/frontend/src/components/Author.scss
@@ -143,7 +143,7 @@ p {
       display: grid;
       grid-template-columns: repeat(11, 1fr);
       grid-template-rows: repeat(6, 1fr);
-      margin-top: 3rem;
+      margin-top: 1rem;
 
       filter: drop-shadow(6px 4px 2px rgba(50, 50, 0, 0.6));
 
@@ -226,6 +226,25 @@ p {
     }
   }
 }
+
+
+
+@media screen and (min-width: 1280px) {
+
+.author-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 3rem;
+    position: relative;
+    overflow: hidden;
+ 
+}
+  .author-image {
+      min-width: 25%;
+      margin-left: 3rem;}
+  }
+
 
 /*
 .author-container { 
