--- a/frontend/src/components/Author.scss
+++ b/frontend/src/components/Author.scss
@@ -227,24 +227,20 @@ p {
   }
 }
 
-
-
 @media screen and (min-width: 1280px) {
-
-.author-container {
+  .author-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 3rem;
     position: relative;
     overflow: hidden;
- 
-}
-  .author-image {
-      min-width: 25%;
-      margin-left: 3rem;}
   }
-
+  .author-image {
+    min-width: 25%;
+    margin-left: 3rem;
+  }
+}
 
 /*
 .author-container { 
