--- a/frontend/src/pages/Gallery.scss
+++ b/frontend/src/pages/Gallery.scss
@@ -4,7 +4,7 @@
   margin-top: 10%;
   margin-left: 5%;
   margin-right: 5%;
-  box-shadow: 4px 1px 4px rgba($color: #000000, $alpha: 0.5);
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
 }
 .image-container figcaption {
   width: 100%;
@@ -13,7 +13,7 @@
   color: white;
   padding: 5px 10px;
   transition: visibility 0s, opacity 0.5s;
-  box-shadow: 4px 4px 4px rgba($color: #000000, $alpha: 0.5);
+  filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
 }
 .image-container figcaption .link {
   color: #ffffff;
