you can create a user account, you can log in with account, the icon user in a page home returns to the login page

--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -42,7 +42,10 @@
     .logo-AFAC {
       max-height: 42px;
     }
-
+    .account {
+      margin-left: 40%;
+      width: 40px;
+    }
     .icone-burger {
       cursor: pointer;
       margin-right: 3%;
@@ -113,7 +116,10 @@ a {
       .logo-AFAC {
         max-height: 109px;
       }
-
+      .account {
+        margin-left: 70%;
+        width: 80px;
+      }
       .icone-burger {
         max-height: 15vw;
         max-width: 15vw;
