--- a/frontend/src/components/About.module.scss
+++ b/frontend/src/components/About.module.scss
@@ -85,7 +85,7 @@
 
     .hexa2 {
       max-width: 150px;
-      min-height: 230px;
+      max-height: 250px;
       margin: 0 calc(50% - 75px);
       display: grid;
       grid-template-columns: repeat(6, 1fr);
@@ -147,10 +147,11 @@
 @media screen and (min-width: 1024px) {
   .about {
     .hexa1 {
-      max-width: 300px;
+      max-width: 260px;
+      min-width: 260px;
       max-height: 240px;
       min-height: 240px;
-      margin: calc(50% - 120px) calc(50% - 150px);
+      margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(8, 1fr);
       grid-template-rows: repeat(7, 1fr);
