--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -57,7 +57,8 @@
 }
 
 .nav-menu {
-  position: relative;
+  position: absolute;
+  height: 100%;
   margin-top: 46px;
   z-index: 1;
   background-color: rgba(234, 234, 234, 0.7);
