add favorite, page userprofil with id

--- a/frontend/src/pages/ArtDetails.scss
+++ b/frontend/src/pages/ArtDetails.scss
@@ -25,6 +25,14 @@
   margin-left: 1em;
 }
 
+.favorite {
+  margin-top: 0.2em;
+  text-align: start;
+  margin-right: 1em;
+  margin-left: 1.2em;
+  font-size: x-large;
+}
+
 .ArtDimension {
   color: #bc7c61;
   text-align: start;
