--- a/frontend/src/components/header.scss
+++ b/frontend/src/components/header.scss
@@ -66,7 +66,7 @@
   display: flex;
   justify-content: center;
   position: fixed;
-  right: -100%;
+  left: 100%;
   transition: 850ms;
 }
 
@@ -95,6 +95,11 @@ a {
   color: #000000;
 }
 
+.useraccountconnected {
+  display: flex;
+  flex-direction: row;
+}
+
 @media screen and (min-width: 768px) {
   .header-big-container {
     height: 117px;
@@ -117,7 +122,7 @@ a {
         max-height: 109px;
       }
       .account {
-        margin-left: 70%;
+        margin-left: 60%;
         width: 80px;
       }
       .icone-burger {
@@ -125,6 +130,10 @@ a {
         max-width: 15vw;
       }
     }
+  }
+  .useraccountconnected {
+    font-size: x-large;
+    margin-right: 1em;
   }
 
   .nav-menu {
