--- a/frontend/src/pages/ArtDetails.scss
+++ b/frontend/src/pages/ArtDetails.scss
@@ -1,6 +1,11 @@
+.parentArtDetails {
+  margin: 5%;
+  margin-top: 0;
+}
+
 .ArtContainer {
   position: relative;
-  max-width: 80%;
+  max-width: 100%;
   margin: auto;
 }
 
@@ -14,40 +19,40 @@
 .ArtAuthor {
   margin-top: 1em;
   text-align: start;
-  margin-right: 1em;
-  margin-left: 1em;
+  // margin-right: 1em;
+  // margin-left: 1em;
 }
 
 .ArtTitle {
   margin-top: 0.2em;
   text-align: start;
-  margin-right: 1em;
-  margin-left: 1em;
+  // margin-right: 1em;
+  // margin-left: 1em;
 }
 
 .ArtDimension {
   color: #bc7c61;
   text-align: start;
-  margin-right: 1em;
-  margin-left: 1.2em;
+  // margin-right: 1em;
+  // margin-left: 1.2em;
 }
 
 .ArtStory {
   text-align: start;
   font-size: x-large;
-  margin-left: 0;
-  margin-left: 1.2em;
+  // margin-left: 1.2em;
 }
 
 .linkbutton {
   display: flex;
   justify-content: end;
   margin-right: 2em;
+  margin-top: 2em;
 }
 
 .returnbutton {
   padding: 2px;
-  margin-bottom: 30px;
+  // margin-bottom: 30px;
   border: 5px double #bc7c61;
   text-decoration: none;
   font-size: 21px;
