--- a/frontend/src/components/UserProfile.scss
+++ b/frontend/src/components/UserProfile.scss
@@ -4,95 +4,85 @@
 }
 
 section {
-  .profile-container {
-    display: flex;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+ 
+  min-width:100%;
+
+  .profile-container{ width: 100%;
+  display: flex;
     flex-direction: column;
-    justify-content: center;
-    margin: 1rem;
-    color: rgb(0, 0, 0);
-    gap: 10px;
+    align-items: center;
+    
+    min-width: 100%;
+  .profile-name{ margin-top: 1rem;
 
-    div {
-      width: 100%;
-    }
-
-    h4 {
-      font-size: clamp(24px, 1.75vw, 24px);
-      margin-top: 2rem;
-      margin-bottom: 4rem;
-      display: flex;
-      justify-content: center;
-    }
-
-    p {
-      font-size: clamp(16px, 1.5vw, 20px);
-    }
-
-    .profile-pic {
-      min-width: 150px;
-      width: 30%;
-    }
-
-    .favorites {
-      display: inline-flex;
-      overflow-x: auto;
-      gap: 30px;
-      margin-bottom: 2rem;
-
-      img {
-        height: 200px;
-        width: 150px;
-        object-fit: cover;
-        margin-bottom: 2rem;
-      }
-
-      @media (max-width: 768px) {
-        overflow-x: scroll;
-        scroll-snap-type: x mandatory;
-
-        img {
-          margin-left: 0.5rem;
-          scroll-snap-align: start;
-          margin-bottom: 1rem;
-        }
-      }
-    }
-
-    .profile-settings {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      max-width: 33%;
-
-      gap: 1rem;
-
-      input {
-        width: 25rem;
-        height: 2rem;
-      }
-
-      button {
-        color: #bc7c61;
-        border-radius: 0.5rem;
-        min-height: 2rem;
-        font-size: 1.5rem;
-        border: 5px double #bc7c61;
-      }
-    }
-
-    .Logout {
-      color: #bc7c61;
-      width: 10rem;
-      margin: auto;
-      border: 5px double #bc7c61;
-    }
-
-    hr {
-      width: 100%;
-      height: 0.5rem;
-      background-color: gray;
-      margin-top: 2rem;
-    }
   }
+
+  button {
+  cursor: pointer;
+    padding: 4px 8px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    border: 5px double #bc7c61;
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-family: "Bebas Neue";
+    background: none;
+    color: #bc7c61;
+  }
+
+  hr {
+    width: 80%;
+    margin: 0 auto;
+  } }
+}
+
+.fav-art-container {
+  display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+   img {
+    padding: 1rem;
+   }
+
+
+
+}
+
+    h2 {
+  
+      font-size: larger;
+      margin-top: 1rem;
+  
+    }
+
+@media screen and (min-width:768px)  { 
+  .fav-parent { 
+  div {   
+ figure
+      {
+      .fav-image-container {
+        display: grid;
+        grid-template-columns: repeat(2fr);
+
+       img {
+        &:nth-child(odd) {
+          grid-area: 1;
+        }
+                &:nth-child(even) {
+                  grid-area: 2;
+                }
+       } 
+      }
+      }
+    }
+    
+ 
+  }
+
+  
+
 }
