--- a/frontend/src/components/UserProfile.scss
+++ b/frontend/src/components/UserProfile.scss
@@ -7,82 +7,73 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
- 
-  min-width:100%;
 
-  .profile-container{ width: 100%;
-  display: flex;
+  min-width: 100%;
+
+  .profile-container {
+    width: 100%;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    
+
     min-width: 100%;
-  .profile-name{ margin-top: 1rem;
+    .profile-name {
+      margin-top: 1rem;
+    }
 
+    button {
+      cursor: pointer;
+      padding: 4px 8px;
+      margin-top: 15px;
+      margin-bottom: 30px;
+      border: 5px double #bc7c61;
+      text-decoration: none;
+      font-size: 1.5rem;
+      font-family: "Bebas Neue";
+      background: none;
+      color: #bc7c61;
+    }
+
+    hr {
+      width: 80%;
+      margin: 0 auto;
+    }
   }
-
-  button {
-  cursor: pointer;
-    padding: 4px 8px;
-    margin-top: 15px;
-    margin-bottom: 30px;
-    border: 5px double #bc7c61;
-    text-decoration: none;
-    font-size: 1.5rem;
-    font-family: "Bebas Neue";
-    background: none;
-    color: #bc7c61;
-  }
-
-  hr {
-    width: 80%;
-    margin: 0 auto;
-  } }
 }
 
 .fav-art-container {
   display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-   img {
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  img {
     padding: 1rem;
-   }
-
-
-
+  }
 }
 
-    h2 {
-  
-      font-size: larger;
-      margin-top: 1rem;
-  
-    }
+h2 {
+  font-size: larger;
+  margin-top: 1rem;
+}
 
-@media screen and (min-width:768px)  { 
-  .fav-parent { 
-  div {   
- figure
-      {
-      .fav-image-container {
-        display: grid;
-        grid-template-columns: repeat(2fr);
+@media screen and (min-width: 768px) {
+  .fav-parent {
+    div {
+      figure {
+        .fav-image-container {
+          display: grid;
+          grid-template-columns: repeat(2fr);
 
-       img {
-        &:nth-child(odd) {
-          grid-area: 1;
+          img {
+            &:nth-child(odd) {
+              grid-area: 1;
+            }
+            &:nth-child(even) {
+              grid-area: 2;
+            }
+          }
         }
-                &:nth-child(even) {
-                  grid-area: 2;
-                }
-       } 
-      }
       }
     }
-    
- 
   }
-
-  
-
 }
