--- a/frontend/src/components/UserProfile.scss
+++ b/frontend/src/components/UserProfile.scss
@@ -21,7 +21,7 @@ section {
       margin-top: 1rem;
     }
 
-    button {
+    .modification {
       cursor: pointer;
       padding: 4px 8px;
       margin-top: 15px;
