adding favorite done

--- a/frontend/src/components/UserProfile.scss
+++ b/frontend/src/components/UserProfile.scss
@@ -57,6 +57,9 @@ h2 {
 }
 
 @media screen and (min-width: 768px) {
+  .profile-name {
+    font-size: xx-large;
+  }
   .fav-parent {
     div {
       figure {
