Changement de la police pour les paragraphes, les inputs et c'est tout ?

--- a/frontend/src/components/About.module.scss
+++ b/frontend/src/components/About.module.scss
@@ -2,6 +2,10 @@
   font-family: "Bebas Neue", sans-serif;
 }
 
+h2 {
+  font-family: "Bebas Neue";
+}
+
 .about {
   position: relative;
   flex: 1 1 0%;
