--- a/frontend/src/components/HomeHexagone.module.scss
+++ b/frontend/src/components/HomeHexagone.module.scss
@@ -67,6 +67,9 @@
     background: none;
     color: #bc7c61;
   }
+  strong {
+    font-family: Bebas Neue;
+  }
 }
 
 @media screen and (min-width: 768px) {
