--- a/frontend/src/components/Author.scss
+++ b/frontend/src/components/Author.scss
@@ -90,9 +90,9 @@
   align-items: center;
 }
 
-h2 {
+h2.author-font-family {
   font-size: 24px;
-
+  font-family: "Bebas Neue";
   margin-bottom: 3rem;
 }
 
