--- a/frontend/src/pages/Gallery.scss
+++ b/frontend/src/pages/Gallery.scss
@@ -22,7 +22,7 @@ img {
   max-width: 100%;
   display: block;
 }
-figure {
+.visage {
   display: grid;
   grid-template-rows: 1fr auto;
   margin-bottom: 30px;
