--- a/frontend/src/pages/ArtDetails.scss
+++ b/frontend/src/pages/ArtDetails.scss
@@ -80,6 +80,26 @@
   background-color: black;
 }
 
+.isFavorite {
+  width: 40px;
+  height: 40px;
+  background-image: url("../assets/starlike.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  align-self: flex-start;
+  cursor: pointer;
+}
+
+.notFavorite {
+  width: 40px;
+  height: 40px;
+  background-image: url("../assets/star.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  align-self: flex-start;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 768px) {
   .parentArtDetails {
     display: grid;
