--- a/frontend/src/components/ProfileUpdater.scss
+++ b/frontend/src/components/ProfileUpdater.scss
@@ -82,6 +82,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    grid-area: 4 / 2;
   }
 
   button {
@@ -102,7 +103,7 @@
     padding-top: 4px;
     border: 5px double #bc7c61;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 24px;
     font-family: "Bebas Neue";
     background: none;
     color: #bc7c61;
