--- a/frontend/src/pages/admin.scss
+++ b/frontend/src/pages/admin.scss
@@ -13,7 +13,7 @@
     h2.form-h2 {
       font-size: 23px;
       text-align: left;
-      margin-bottom: 0;
+      margin: 0;
     }
 
     section.link-container {
