--- a/frontend/src/pages/adminCreateArt.scss
+++ b/frontend/src/pages/adminCreateArt.scss
@@ -4,9 +4,10 @@
   margin: 0 auto;
   position: relative;
 
-  h2 {
+  h2.create-art {
     font-size: 23px;
     text-align: left;
+    margin: 0;
 
     @media screen and (min-width: 768px) {
       font-size: 28px;
@@ -25,6 +26,7 @@
     display: flex;
     justify-content: center;
     padding: 1.5rem;
+    margin-bottom: 5rem;
     border: 1px solid #000000;
 
     form {
@@ -39,12 +41,16 @@
         width: 100%;
 
         input,
-        textarea {
+        textarea,
+        select {
           border: 2px solid #74658a;
+          background-color: transparent;
+          color: #74658a;
           height: 35px;
           width: 100%;
           margin-bottom: 1rem;
           padding: 0 0.5rem;
+          font-size: 20px;
         }
 
         textarea {
@@ -58,7 +64,8 @@
       .date-label {
         display: flex;
 
-        input {
+        input,
+        select {
           width: 100%;
           margin-right: 0.5rem;
 
@@ -99,7 +106,8 @@
         }
 
         label {
-          input {
+          input,
+          select {
             height: 45px;
           }
         }
