--- a/frontend/src/components/UserProfile.module.scss
+++ b/frontend/src/components/UserProfile.module.scss
@@ -38,6 +38,15 @@
     font-size: 2rem;
   }
 
+  p {
+    margin-top: 2em;
+    font-size: x-large;
+  }
+
+  .figure {
+    filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
+  }
+
   @media screen and (min-width: 768px) {
     .span {
       display: grid;
