--- a/frontend/src/components/AllUserAPI.scss
+++ b/frontend/src/components/AllUserAPI.scss
@@ -1,6 +1,7 @@
 section.user-be-container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
 }
 h1.user-title {
