--- a/frontend/src/pages/adminCreateArt.scss
+++ b/frontend/src/pages/adminCreateArt.scss
@@ -61,7 +61,8 @@
       }
 
       .dimensions-label,
-      .date-label {
+      .date-label,
+      .img-label {
         display: flex;
 
         input,
@@ -73,6 +74,12 @@
             margin: 0;
           }
         }
+      }
+
+      img {
+        height: 35px;
+        margin-right: 0.5rem;
+        margin-bottom: 1rem;
       }
 
       button {
@@ -108,6 +115,10 @@
         label {
           input,
           select {
+            height: 45px;
+          }
+
+          img {
             height: 45px;
           }
         }
