few fixes : a bit of orthograph, changed the toast.alert to toast.error, add keys on map functions, updated the arts displayed in the hexagons on homePage, made the author image dynamic

--- a/frontend/src/components/Author.scss
+++ b/frontend/src/components/Author.scss
@@ -93,6 +93,12 @@
 h2.author-font-family {
   font-size: 24px;
   font-family: "Bebas Neue";
+  margin-bottom: 1rem;
+}
+
+h3 {
+  color: #bc7c61;
+  font-family: "Bebas Neue";
   margin-bottom: 3rem;
 }
 
