--- a/backend/src/views/index.hbs
+++ b/backend/src/views/index.hbs
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Carte postale</title>
     <style>
-      div.container { text-align: center; } h2 { text-align: center; } div.image-container { text-align: center; } img
-      { width: 50%; height: auto;
-      box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.34); } a {text-decoration: none; color: #7F253E} p.message {background-color: #C4B29A; width: 50%; margin: 25 auto}
+      div.container { text-align: center; } h2 { text-align: center; }
+      div.image-container { text-align: center; } img { width: 50%; height:
+      auto; box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.34); } a
+      {text-decoration: none; color: #7F253E} p.message {background-color:
+      #C4B29A; width: 50%; margin: 25 auto}
     </style>
   </head>
 
