--- a/frontend/src/pages/admin.scss
+++ b/frontend/src/pages/admin.scss
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin-top: 1rem;
+  margin: 2rem 0;
 
   .link-big-container {
-    padding: 20px 0;
+    padding-bottom: 30px;
     width: 75%;
     height: 100%;
     margin: 0 auto;
@@ -23,7 +23,8 @@
       padding: 1.5rem;
       border: 1px solid #000000;
 
-      a.link-looks-like-button {
+      a.link-looks-like-button,
+      button.to-add-data {
         padding: 2px;
         padding-top: 4px;
         border: 5px double #bc7c61;
@@ -33,6 +34,13 @@
         width: 80%;
         margin: 0.5rem auto;
         text-align: center;
+      }
+
+      button.to-add-data {
+        text-decoration: none;
+        font-size: 23px;
+        background: none;
+        cursor: pointer;
       }
     }
   }
@@ -45,7 +53,7 @@
 
     .link-big-container {
       width: 45%;
-      margin: 0;
+      margin: 0 1rem;
 
       h2.form-h2 {
         font-size: 28px;
