--- a/frontend/src/components/LogIn.scss
+++ b/frontend/src/components/LogIn.scss
@@ -1,108 +1,127 @@
-.app {
-  font-family: sans-serif;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 20px;
-  height: 100vh;
+div.bg-hexa-bottom {
+  position: fixed;
+  z-index: -1;
+  width: 200px;
+  height: 200px;
+  transform: rotate(15deg);
+  bottom: -100px;
+  right: -40px;
+  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  background: linear-gradient(
+    90deg,
+    rgba(127, 37, 62, 1) 0%,
+    rgba(127, 37, 62, 0.35) 100%
+  );
+}
 
-  .login-form {
-    background-color: white;
-    padding: 2rem;
+.form-container {
+  padding: 20px 0;
+  width: 75%;
+  margin: 0 auto;
+  position: relative;
+
+  h2.title {
+    font-size: 23px;
+    text-align: left;
+    margin: 0;
+
+    @media screen and (min-width: 768px) {
+      font-size: 28px;
+    }
   }
 
-  .title {
-    font-family: Bebas Neue;
-    font-size: 25px;
-    margin-bottom: 20px;
-  }
-
-  .hexagone {
-    position: absolute;
-    bottom: -90px;
-    right: -54px;
-    width: 200px;
-    height: 200px;
-    transform: rotate(43deg);
-    clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
-    background: linear-gradient(
-      90deg,
-      rgba(127, 37, 62, 1) 0%,
-      rgba(127, 37, 62, 0.3505996148459384) 100%
-    );
-    z-index: -1;
-  }
-}
-input.border[type="email"],
-input.border[type="password"] {
-  height: 25px;
-  border: 2px solid #74658a;
-}
-
-button[type="submit"] {
-  cursor: pointer;
-  padding: 4px 8px;
-  margin-top: 15px;
-  margin-bottom: 30px;
-  border: 5px double #bc7c61;
-  text-decoration: none;
-  font-size: 1.5rem;
-  font-family: "Bebas Neue";
-  background: none;
-  color: #bc7c61;
-}
-
-.button-container {
-  display: flex;
-  justify-content: center;
-}
-
-.list-container {
-  display: flex;
-}
-
-.error {
-  color: red;
-  font-size: 12px;
-}
-
-.input-container {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin: 10px;
-}
-.text {
-  font-size: 1rem;
-}
-.sign-up {
-  cursor: pointer;
-  padding: 2px;
-  border: 5px double #bc7c61;
-  text-decoration: none;
-  font-size: 1rem;
-  font-family: "Bebas Neue";
-  background: none;
-  color: #bc7c61;
-  margin-left: 2%;
-  height: auto;
-}
-
-@media screen and (min-width: 1024px) {
-  input.border[type="email"],
-  input.border[type="password"] {
-    height: 35px;
-  }
-  .text {
+  form.login-form {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    font-size: 1rem;
-  }
-  .sign-up {
-    display: flex;
-    justify-content: center;
-    font-size: 1rem;
+    padding: 1.5rem;
+    margin-bottom: 5rem;
+    border: 1px solid #000000;
+    font-size: 20px;
+
+    label {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+
+      @media screen and (min-width: 1024px) {
+        width: 75%;
+      }
+    }
+
+    input.border {
+      height: 35px;
+      width: 75%;
+      border: 2px solid #74658a;
+      margin-bottom: 1rem;
+      padding: 0 0.5rem;
+
+      @media screen and (min-width: 1024px) {
+        height: 45px;
+      }
+    }
+
+    button[type="submit"] {
+      cursor: pointer;
+      padding: 4px 8px;
+      margin-top: 15px;
+      margin-bottom: 30px;
+      border: 5px double #bc7c61;
+      text-decoration: none;
+      font-size: 1.5rem;
+      font-family: "Bebas Neue";
+      background: none;
+      color: #bc7c61;
+    }
+
+    .text {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      font-size: 1rem;
+      text-align: center;
+
+      @media screen and (min-width: 1024px) {
+        flex-direction: row;
+      }
+    }
+
+    .sign-up {
+      cursor: pointer;
+      padding: 2px;
+      border: 5px double #bc7c61;
+      text-decoration: none;
+      font-size: 1rem;
+      font-family: "Bebas Neue";
+      background: none;
+      color: #bc7c61;
+      max-width: 75%;
+      margin: 0 auto;
+      margin-top: 0.5rem;
+      // height: auto;
+
+      @media screen and (min-width: 1024px) {
+        margin: 0;
+        margin-left: 1.5rem;
+      }
+    }
   }
 }
+
+// .hexagone {
+//   position: absolute;
+//   bottom: -90px;
+//   right: -54px;
+//   width: 200px;
+//   height: 200px;
+//   transform: rotate(43deg);
+//   clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+//   background: linear-gradient(
+//     90deg,
+//     rgba(127, 37, 62, 1) 0%,
+//     rgba(127, 37, 62, 0.3505996148459384) 100%
+//   );
+//   z-index: -1;
+// }
