--- a/frontend/src/pages/Gallery.scss
+++ b/frontend/src/pages/Gallery.scss
@@ -13,12 +13,17 @@
 
     .icon-gallery-page {
       font-size: 25px;
-      height: 100%;
+      height: 20px;
       width: 20px;
       margin-top: 0;
       background-color: transparent;
       border: none;
       cursor: pointer;
+
+      img {
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .icon-gallery-page:hover {
